# crypton

./: .env  Cargo.toml  README.md  crypton.db
migrations/: 20211012220701_notes.sql  20211013022958_tags.sql
src/: main.rs  tags.rs  utils.rs
