[package]
name = "crypton"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.1"
dotenv = "0.15.0"
itertools = "0.10.1"
sha-1 = "0.9.8"
shellexpand = "2.1.0"
sqlx = { version = "0.5", features = ["sqlite", "migrate", "macros", "runtime-tokio-native-tls", "chrono"] }
tempfile = "3.2.0"
thiserror = "1.0.29"
tokio = { version = "1.12", features = ["full"] }
